Closed Bug 1200684 Opened 10 years ago Closed 9 years ago

Rendering issues with opacity: using skia in Nightly

Categories

(Core :: Graphics, defect)

42 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: beta, Assigned: lsalzman)

References

Details

(Keywords: reproducible, Whiteboard: gfx-noted)

Attachments

(3 files)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:42.0) Gecko/20100101 Firefox/42.0 Build ID: 20150831004018 Steps to reproduce: Visited https://steamlug.org/mumble in 43.0a1 with gfx.content.azure.backends set to skia Actual results: The Mumble list of users uses css opacity to make channels and subchannels less intense. However with the skia renderer, this is making the background darker as well. Expected results: Unlike Firefox with cairo, and Chromium, this appears incorrect.
Attached file small-testcase.html
Put together an offline reproduction of that behaviour
Component: Untriaged → Graphics
Product: Firefox → Core
Tentatively hanging this off bug 1007702 as well in case it's not Linux specific.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: reproducible
Whiteboard: gfx-noted
Upstream bug report with proposed fix: https://codereview.chromium.org/2097883002
This is a port of work I did in upstream Skia to fix this issue: https://skia.googlesource.com/skia/+/40254c2c2dc28a34f96294d5a1ad94a99b0be8a6 Also some tests needed to be fuzzed due to the slight differences in blending.
Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Attachment #8778433 - Flags: review?(mchang)
Attachment #8778433 - Flags: review?(mchang) → review+
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/ffd7f9c1bbf9 revise Skia row blits to preserve color when blended against itself. r=mchang
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Blocks: 1325259
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: